# Automatas

./: CMakeLists.txt  IntHashSet.c  IntHashSet.h  README.txt  cDFA.c  cDFA.h  dfa.c  dfa.h  main.c  nfa.c  nfa.h
